--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,9 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="My Portfolio Page">
+  <meta content="Desmond Ngwuta - Software Engineer" name="description">
+  <meta content="Desmond Ngwuta" property="og:title">
+  <meta content="Mobile Developer specializing in Android and Flutter" property="og:description">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
